syntax = "proto3";

package transfer_lib;
option go_package="./transfer_lib";

message GetAccountRequest {
  string mnemonic = 1;
  string password = 2;
  int64 index = 3;
  repeated string addressTypes = 4;
}

message GetAccountResponse {
  map<string,Account> accounts = 1;
}

message Account {
  string privateKey = 1;
  string address = 2;
}

message GetBalanceRequest {
  string address = 1;
  string addressType = 2;
  repeated string currencies = 3;
}

message GetBalanceResponse {
  map<string,double> balances = 1;
}

message TransferRequest {
  string chain = 1;
  string privateKey = 2;
  string to = 4;
  string currency = 5;
  double value = 6;
}

message TransferResponse {
  string transcationHash = 1;
}

message GetTranscationRequest {
  string chain = 1;
  string transcationHash = 2;
}

message GetTranscationResponse {
  bool result = 1;
  uint64 height = 2;
  uint64 timestamp = 3;
  string currency = 4;
	string from = 5;      
	string to = 6;        
	double value = 7;    
  uint64 confirms = 8;
}

service TransferLib {
  rpc GetAccount(GetAccountRequest) returns(GetAccountResponse);
  rpc GetBalance(GetBalanceRequest) returns(GetBalanceResponse);
  rpc Transfer(TransferRequest) returns(TransferResponse);
  rpc GetTranscation(GetTranscationRequest) returns(GetTranscationResponse);
}
